Fixed overflow styling on reminders page

--- a/templates/reminders/style.css
+++ b/templates/reminders/style.css
@@ -79,12 +79,10 @@ input {
 
 .input {
   background-color: #fff;
-  bottom: 0;
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  position: fixed;
   height: 2.5rem;
   width: 100%;
 }
